--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: ryanbranch.net
 author: "Ryan Branch"
 description: >- # this means to ignore newlines until "baseurl:"
-  Ryan Branch is an engineer and scientific researcher from Michigan.
+  Landing page for Ryan Branch, an engineer and scientific researcher from Michigan.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ryanbranch.net" # the base hostname & protocol for your site, e.g. http://example.com
 # Contact-related
@@ -17,6 +17,13 @@ orcid_id: "0000-0001-6456-3468"
 google_scholar_id: "tkVpzE4AAAAJ"
 # Contact Form Configuration
 formspree_endpoint_contact: "xbjpgbvy"
+
+# Static Page Permalinks
+# NOTE: MUST BE UPDATED TO MATCH THE PERMALINKS SET IN THE FRONT MATTER OF EACH RELEVANT PAGE
+permalink_portfolio: "/portfolio/"
+permalink_software_projects: "/software/"
+permalink_hardware_projects: "/hardware/"
+permalink_experience: "/experience/"
 
 # Special Characters
 right_arrow: "&#9656;"
@@ -54,3 +61,5 @@ plugins:
 exclude:
   - personal/
   - sandbox/
+  - private/
+  - ignore/
